# market-data-automation

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: daily_pipeline.yml
docs/: architecture.md
scripts/: backfill.py
src/: config.py  models.py
src/fetchers/: __init__.py  coingecko.py  commodities.py
src/storage/: __init__.py  base.py  csv_store.py  sheets.py  sqlite_store.py
src/transformers/: __init__.py  normalizer.py
src/utils/: __init__.py  logger.py
src/validators/: __init__.py  schema.py
tests/: test_config.py  test_fetchers.py  test_main.py  test_storage.py  test_transformers.py  test_validators.py
