[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-automation"
version = "1.0.0"
description = "A scheduled Python data pipeline that fetches, normalizes, and stores market data."
requires-python = ">=3.11"
authors = [{name = "Antigravity AI Agent"}]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
